--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/parser": "^3.0.1",
     "eslint": "^7.1.0",
     "lodash": "^4.17.15",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   },
   "dependencies": {
