--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node lib/src/index.js",
+    "start": "nodemon lib/src/index.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -23,6 +23,7 @@
     "apollo-server": "^2.13.1",
     "firebase-admin": "^8.12.1",
     "graphql": "^15.0.0",
-    "graphql-tag": "^2.10.3"
+    "graphql-tag": "^2.10.3",
+    "nodemon": "^2.0.4"
   }
 }
